--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ script:
     - docker run -e CI=true docker_myreact npm run test
 
 deploy:
+  - echo $AWS_SECRET_ACCESS_KEY
+  - echo $AWS_ACCESS_KEY_ID
   provider: elasticbeanstalk
   access_key_id: "$ACCESS_KEY_ID"
   secret_access_key: "$SECRET_ACCESS_KEY"
