added code snippet

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,11 @@ script:
 
 deploy:
   provider: elasticbeanstalk
+  #access_key_id: $AWSN_ACCESS_KEY_ID
+  #secret_access_key: "$AWSN_ACCESS_KEY_ID"
+  
   access_key_id: $AWSN_ACCESS_KEY_ID
-  secret_access_key: "$AWSN_SECRET_ACCESS_KEY"
+  secret_access_key: $AWSN_ACCESS_KEY_ID
   region: "ap-south-1"
   app: "myReactAppDocker"
   env: "Myreactappdocker-env"
