added code snippet added key

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ deploy:
   provider: elasticbeanstalk
   #access_key_id: $AWSN_ACCESS_KEY_ID
   #secret_access_key: "$AWSN_ACCESS_KEY_ID"
-  
+
   access_key_id: $AWSN_ACCESS_KEY_ID
-  secret_access_key: $AWSN_ACCESS_KEY_ID
+  secret_access_key: $AWS_SECRET_ACCESS_KEY
   region: "ap-south-1"
   app: "myReactAppDocker"
   env: "Myreactappdocker-env"
