--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ deploy:
   access_key_id: $AWSN_ACCESS_KEY_ID
   secret_access_key: $AWS_SECRET_ACCESS_KEY
   region: "ap-south-1"
-  app: "myReactAppDocker"
-  env: "Myreactappdocker-env"
+  app: "reactapptwo"
+  env: "Reactapptwo-env"
   bucket_name: "elasticbeanstalk-ap-south-1-517491539969"
   bucket_path: "myReactAppDocker"
   on:
